2004-07-20  Christophe Fergeau <teuf@gnome.org>

	* modules/vfolder/vfolder-info.c: fix compilation after the previous
	  commit

2004-07-20  Christophe Fergeau <teuf@gnome.org>

        * libgnomevfs/gnome-vfs-monitor-private.h
	* libgnomevfs/gnome-vfs-monitor.c
        * libgnomevfs/gnome-vfs-module-shared.h: export
          gnome_vfs_monitor_callback in the module API. Fixes #144015

2004-07-21  Christophe Fergeau <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-context.c 
	* libgnomevfs/gnome-vfs-method.c
	* libgnomevfs/gnome-vfs-mime-info.c
	* libgnomevfs/gnome-vfs-unix-mounts.c
	* libgnomevfs/gnome-vfs-uri.c: marked a bunch of global variable which
	  weren't meant to be exported as static

2004-07-20  Josselin Mouette <joss@debian.org>

	* modules/tar-method.c: prevent crash when opening tar:/// in Nautilus

2004-07-20  Christophe Fergeau <teuf@gnome.org>

	* schemas/system_dns_sd_schemas.in: added missing period at the end of
	  a long description. Fixes #145360

2004-07-20  Narayana Pattipati  <narayana.pattipati@wipro.com>

        * libgnomevfs/gnome-vfs-filesystem-type.c:
          Add an entry for Sun SAM-QFS filesystem. Bugzilla bug#145442.

	
2004-07-20  Kurt Roeckx  <Q@ping.be>

	* configure.in: fixes test for res_search in libresolv on amd64 
	  (resolv.h needs to be included for the test to succeed). Fixes bug
	  #147702

2004-07-20  Christophe Fergeau  <teuf@gnome.org>
	
	* modules/sftp-method.c: use memset instead of bzero
	* libgnomevfs/gnome-vfs-resolve.c: include strings.h if available
	  since this file uses bzero which is defined there. Fixes part of
	  bug #147887

2004-07-18  Christian Kellner <gicmo@gnome-de.org>

	* po/POTFILES.skip: Added neon files because we do not use neon strings
	anywhere in the http method.
		
2004-07-17  Murray Cumming  <murrayc@murrayc.com>

	* libgnomevfs/gnome-vfs-address.h: In the GnomeVFSAddres hidden-struct 
	declaration, put the _ before rather than after, because that's what 