@@ -1,3 +1,9 @@
+2004-07-21  Christian Kellner <gicmo@gnome-de.org>
+
+	* libgnomevfs/gnome-vfs-inet-connection.c 
+	(gnome_vfs_inet_connection_write): Set the cancellation fd in read
+	fd-set not in write fd-set. Fixes cancellation for writes.
+
 2004-07-20  Christophe Fergeau <teuf@gnome.org>
 
 	* modules/vfolder/vfolder-info.c: fix compilation after the previous
